--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
               colors: {
                 gradient: '#FFFFFF',
                 arrow:'#ABEF5F',
+                text_ash: '#737373',
               },
               fontFamily: {
                 manrope: 'Manrope',
@@ -36,59 +37,81 @@
 </head>
 
 <body class="font-manrope">
+  <!-- Header Section -->
     <header class="bg-gradient-to-b from-gray-300 to-transparent">
         <!-- Nav-bar started -->
         <nav class="w-11/12 mx-auto">
             <div class="navbar">
-                <div class="navbar-start">
+            <!-- nav start portion -->
+                <div class="navbar-start w-96">
+                  <a href="#" class="text-xl font-bold"><span><i class="fa-solid fa-arrow-right bg-arrow rounded-full p-1 -rotate-45"></i></span> Rinterio</a>
+                </div>
+            <!-- nav center portion -->
+                <div class="navbar-center hidden lg:flex h-7">
+                  <ul class="menu menu-horizontal px-1 text-sm">
+                    <li class="hover:text-blue-700 font-medium"><a>Home</a></li>
+                    <li class="text-text_ash hover:text-blue-500"><a>Services</a></li>
+                    <li class="text-text_ash hover:text-blue-500"><a>Portfolio</a></li>
+                    <li class="text-text_ash hover:text-blue-500"><a>Blogs</a></li>
+                    <li class="text-text_ash hover:text-blue-500"><a>Contact Us</a></li>
+                  </ul>
+                </div>
+            <!-- nav end portion -->
+                <div class="navbar-end">
+                  <div class="flex gap-3">
+                    <!-- search icon -->
+                    <div class="hidden md:block lg:block">
+                      <button class="btn btn-sm btn-ghost btn-circle bg-white">
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          class="h-5 w-5"
+                          fill="none"
+                          viewBox="0 0 24 24"
+                          stroke="currentColor">
+                          <path
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            stroke-width="2"
+                            d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+                        </svg>
+                      </button>
+                    </div>
+                    <!-- shopping card -->
+                    <div class="hidden md:block lg:block">
+                    <button class="btn btn-sm btn-ghost btn-circle bg-white">
+                      <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="h-5 w-5"
+                      fill="white"
+                      viewBox="0 0 24 24"
+                      stroke="currentColor">
+                      <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                      </svg>
+                    </div>
+                    <!-- Book consult button -->
+                    <div class="hidden md:block lg:block w-36">
+                      <a class="btn btn-sm bg-arrow rounded-full border-none py-0 text-sm font-bold">Book Consult <span><i class="fa-solid fa-arrow-right bg-black rounded-full p-1 -rotate-45 text-white"></i></span></a>
+                    </div>
+                  </div>
+                  <!-- dropdown start -->
                   <div class="dropdown">
                     <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-                      <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        class="h-5 w-5"
-                        fill="none"
-                        viewBox="0 0 24 24"
-                        stroke="currentColor">
-                        <path
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                          stroke-width="2"
-                          d="M4 6h16M4 12h8m-8 6h16" />
-                      </svg>
+                      <i class="fa-solid fa-bars bg-white p-2 rounded-full"></i>
                     </div>
                     <ul
                       tabindex="0"
-                      class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
-                      <li><a>Item 1</a></li>
-                      <li>
-                        <a>Parent</a>
-                        <ul class="p-2">
-                          <li><a>Submenu 1</a></li>
-                          <li><a>Submenu 2</a></li>
-                        </ul>
-                      </li>
-                      <li><a>Item 3</a></li>
+                      class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow  right-0 gap-2">
+                      <li class="hover:text-blue-700 font-medium"><a>Home</a></li>
+                      <li class="text-text_ash hover:text-blue-500"><a>Services</a></li>
+                      <li class="text-text_ash hover:text-blue-500"><a>Portfolio</a></li>
+                      <li class="text-text_ash hover:text-blue-500"><a>Blogs</a></li>
+                      <li class="text-text_ash hover:text-blue-500"><a>Contact Us</a></li>
                     </ul>
                   </div>
-                  <a class="text-xl font-bold"><span><i class="fa-solid fa-arrow-right bg-arrow rounded-full p-1 -rotate-45"></i></span> Rinterio</a>
-                </div>
-                <div class="navbar-center hidden lg:flex">
-                  <ul class="menu menu-horizontal px-1">
-                    <li><a>Item 1</a></li>
-                    <li>
-                      <details>
-                        <summary>Parent</summary>
-                        <ul class="p-2">
-                          <li><a>Submenu 1</a></li>
-                          <li><a>Submenu 2</a></li>
-                        </ul>
-                      </details>
-                    </li>
-                    <li><a>Item 3</a></li>
-                  </ul>
-                </div>
-                <div class="navbar-end">
-                  <a class="btn">Button</a>
                 </div>
               </div>
         </nav>
