--- a/index.html
+++ b/index.html
@@ -115,7 +115,22 @@
                 </div>
               </div>
         </nav>
-        <div></div>
+        <!-- Header-content section start  -->
+        <div>
+          <div class="hero w-11/12 mx-auto">
+            <div class="text-center w-8/12">
+              <div class="lg:w-4/12 mx-auto">
+                <img src="./images/banner.png" alt="">
+              </div>
+                <h1 class="text-4xl font-extrabold mt-5">A barn house of this design has a 
+                  <br> striking appearance</h1>
+                <p class="py-5 text-text_ash text-sm">
+                  The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.
+                </p>
+                  <a class="btn btn-sm bg-lime-200 rounded-full border-none py-0 text-sm font-bold">View Details <span><i class="fa-solid fa-arrow-right bg-arrow rounded-full p-1 -rotate-45 text-black"></i></span></a>
+            </div>
+          </div>
+        </div>
     </header>
     
 </body>
