We desing thoughtful section fully completed

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 </head>
 
 <body class="font-manrope">
-  <!-- Header Section -->
-    <header class="bg-gradient-to-b from-gray-300 to-transparent">
+<!-- Header Started -->
+    <header class="bg-gradient-to-b from-gray-300 to-transparent lg:mb-16 mb-10">
         <!-- Nav-bar started -->
         <nav class="w-11/12 mx-auto">
             <div class="navbar">
@@ -127,11 +127,75 @@
                 <p class="py-5 text-text_ash text-sm">
                   The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.
                 </p>
-                  <a class="btn btn-sm bg-lime-200 rounded-full border-none py-0 text-sm font-bold">View Details <span><i class="fa-solid fa-arrow-right bg-arrow rounded-full p-1 -rotate-45 text-black"></i></span></a>
+                  <a class="btn btn-sm bg-lime-200 rounded-full border-none py-0 text-sm font-bold w-full lg:w-36">View Details <span><i class="fa-solid fa-arrow-right bg-arrow rounded-full p-1 -rotate-45 text-black"></i></span></a>
             </div>
           </div>
         </div>
     </header>
+
+<!-- Main Started -->
+     <main>
+      <!-- Secton: We design thoughtful -->
+      <section>
+        <div class="bg-base-200 relative">
+          <!-- vector graphic -->
+           <div class="absolute left-8 top-5 hidden lg:block">
+            <img src="./images/Vector.png" alt="">
+           </div>
+
+            <div class="hero w-11/12 mx-auto lg:py-16 sm:py-14 hero-content flex-col lg:flex-row">
+          <!-- section left side text -->
+              <div class="flex-1">
+                <!-- about button -->
+                 <div class="lg:text-start text-center">
+                <button class="bg-white px-3 rounded-full mb-4"><span class="pr-1"><i class="fa-solid fa-arrow-right"></i></span> About Us</button>
+                 </div>
+                <!-- text portion -->
+                 <div class="text-center lg:text-left">
+                <h1 class="text-3xl font-extrabold">We design thoughtful, <br>liveable spaces</h1>
+                <p class="py-7 text-sm text-text_ash">
+                  We design our houses according to the situation and place. Commercial and residential houses are different in looks, decorations & facilities.
+                </p>
+                 </div>
+                <!-- commercial div -->
+                  <div class="hero bg-white m-0 p-0 rounded-lg">
+                    <div class="hero-content flex-row lg:flex-row">
+                      <img 
+                        src="./images/commercial.png"
+                        class="max-w-sm rounded-lg shadow-2xl" />
+                      <div>
+                        <h1 class="text-lg font-bold">Commercial</h1>
+                        <p class="py-1 text-sm text-text_ash">
+                          Commercial buildings are build beside the road. It has wide parking area and multiple elevators.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                 <!-- Residential div -->
+                 <div class="hero bg-white m-0 p-0 rounded-lg mt-5">
+                  <div class="hero-content flex-row lg:flex-row">
+                    <img 
+                      src="./images/residential.png"
+                      class="max-w-sm rounded-lg shadow-2xl" />
+                    <div>
+                      <h1 class="text-lg font-bold">Commercial</h1>
+                      <p class="py-1 text-sm text-text_ash">
+                        Residential buildings are in quite place. Every house has a garden in front of it.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+          <!-- section right side image -->
+              <div class="flex-1">
+                <img
+                src="./images/Rectangle.png"
+                class="m-auto rounded-lg shadow-2xl" />
+              </div>
+            </div>
+        </div>
+      </section>
+     </main>
     
 </body>
 </html>
