Woriking on out latest portfolio

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </head>
 
 <body class="font-manrope">
-  <!-- Header Started -->
+<!-- Header Started -->
   <header class="bg-gradient-to-b from-gray-300 to-transparent lg:mb-16 mb-10">
     <!-- Nav-bar started -->
     <nav class="w-11/12 mx-auto">
@@ -126,7 +126,7 @@
     </div>
   </header>
 
-  <!-- Main Started -->
+<!-- Main Started -->
   <main>
     <!-- Secton: We design thoughtful -->
     <section>
@@ -189,7 +189,7 @@
      
     </section>
 
-<!-- Our work process -->
+    <!-- Our work process -->
     <section>
       <!-- md:h-[870px] lg:h-[770px] -->
       <div class="bg-base-200 py-20">
@@ -233,18 +233,73 @@
       </div>
     </section>
 
-<!-- Our latest Portfolio -->
+    <!-- Our latest Portfolio -->
     <section>
-      <div class="bg-white">
-        <div class="w-11/12 mx-auto">
+      <div class="bg-base-200 lg:bg-white">
+      <div class="w-11/12 mx-auto py-20">
          <!-- upper text related div -->
-          <div>
-            <button class="bg-white font-semibold px-3 rounded-full mb-6"><span class="pr-1"><i
+          <div class="text-center">
+            <button class="bg-lime-200 font-semibold px-3 rounded-full mb-6"><span class="pr-1"><i
               class="fa-solid fa-arrow-right"></i></span> Explore our Latest works</button>
+              <h1 class="text-3xl font-extrabold">Our Latest Portfolio</h1>
+              <p class="text-text_ash text-sm py-5">Our Portfolio is always update and we have various innovation. Some of our iconic project is popular to all people. We have done a survey to our valuable customer and majority of them were happy with us.</p>
           </div>
 
+          <!-- Portfolio card div -->
+          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-3">
+            <!-- item-1 -->
+              <div class="card lg:card-side bg-base-100 border border-gray-300 p-3 lg:col-span-3 md:col-span-2 lg:items-center rounded-lg md:flex-row lg:flex-row">
+                  <img
+                    src="./images/img1.png"
+                    alt="commercial"/>
+                <div class="card-body py-3 md:pl-3 lg:pl-5 pl-0">
+                  <h2 class="card-title font-semibold">Commercial</h2>
+                  <p class="text-text_ash text-sm">This is one of our stylist home for commercial purpose which have a wide area for markte place and there is an office in the top floor.</p>
+                  <div class="justify-start">
+                    <a class="btn btn-sm bg-transparent border-none py-0 px-0 text-sm font-bold border-none ml-0">View Details
+                      <span><i class="fa-solid fa-arrow-right bg-arrow rounded-full p-1 -rotate-45 text-black"></i></span></a>
+                  </div>
+                </div>
+              </div>
+            <!-- item-2 -->
+              <div class="card lg:card-side bg-base-100 border border-gray-300 p-3 items-center rounded-lg">
+                <img
+                  src="./images/img2.png"
+                  alt="commercial" class="w-screen"/>
+              </div>
+            <!-- item-3 -->
+              <div class="card lg:card-side bg-base-100 border border-gray-300 p-3 items-center">
+                <img
+                  src="./images/img3.png"
+                  alt="commercial" class="w-screen"/>
+              </div>
+            <!-- item-4 -->
+              <div class="card lg:card-side bg-base-100 border border-gray-300 p-3 lg:col-span-2 md:col-span-2 md:flex-row lg:flex-row items-center">
+                <img
+                  src="./images/img4.png"
+                  alt="commercial" class="w-screen lg:w-11/12"/>
+               <div class="card-body py-3 md:pl-3 lg:pl-5 pl-0">
+                <h2 class="card-title font-semibold">Commercial</h2>
+                <p class="text-text_ash text-sm">This is one of our stylist home for commercial.</p>
+                <div class="justify-start">
+                  <a class="btn btn-sm bg-transparent border-none py-0 px-0 text-sm font-bold border-none ml-0">View Details
+                    <span><i class="fa-solid fa-arrow-right bg-arrow rounded-full p-1 -rotate-45 text-black"></i></span></a>
+                </div>
+                </div>
+              </div>
+              <!-- item-5 -->
+                <div class="card lg:card-side bg-base-100 border border-gray-300 p-3 items-center">
+                  <img
+                    src="./images/img5.png"
+                    alt="commercial" class="w-screen"/>
+                </div>
+              <!-- item-6 -->
+                <div class="card lg:card-side bg-base-100 border border-gray-300 p-3 items-center lg:hidden">
+                <img
+                  src="./images/img3.png"
+                  alt="commercial" class="w-screen"/>
+                </div>
         </div>
-
       </div>
     </section>
   </main>
@@ -252,3 +307,4 @@
 </body>
 
 </html>
+
