--- a/index.html
+++ b/index.html
@@ -328,8 +328,8 @@
               </div>
             </div>
             <!-- item-2 -->
-            <div class="lg:col-span-3 bg-base-100 border border-gray-300 p-3 items-center rounded-2xl">
-              <img src="./images/img2.png" alt="commercial" class="w-full h-full md:w-64 md:h-44 lg:w-auto lg:h-44 mx-0 pl-0"/>
+            <div class="lg:col-span-3 bg-base-100 border border-gray-300 p-3 items-right rounded-2xl">
+              <img src="./images/img2.png" alt="commercial" class="w-full h-full md:w-64 md:h-44 lg:w-screen lg:h-44 mx-0 pl-0"/>
             </div>
             <!-- item-3 -->
             <div class="lg:col-span-2 bg-base-100 border border-gray-300 p-3 items-center rounded-2xl">
